--- a/index.html
+++ b/index.html
@@ -1,2 +1,11 @@
 <!-- Write your HTML in this file -->
-
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylehsheet" type="text/css" href="style.css"></link>
+  </head>
+  
+  <body>
+    
+  </body>
+</html>
