--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html lang="en">
   <head>
     <link rel="stylehsheet" type="text/css" href="style.css"></link>
+    <title>New Page</title>
   </head>
   
   <body>
