--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <link rel="stylehsheet" type="text/css" href="style.css"></link>
+    <link rel="stylehsheet" type="text/css" href="style.css">
     <title>New Page</title>
   </head>
   
